# promptprep

./: .coverage  .coveragerc  .gitignore  .readthedocs.yaml  README.md  format_code.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
PromptPrep/: __init__.py  aggregator.py  cli.py  config.py  formatters.py  tui.py
docs/source/: about.rst  changelog.rst  command_reference.rst  conf.py  configuration.rst  contributing.rst  custom_templates.rst  diff_generation.rst  examples.rst  features.rst  incremental_processing.rst  index.rst  installation.rst  interactive_mode.rst  license.rst  output_formats.rst  quickstart.rst  roadmap.rst  tips_and_tricks.rst  token_counting.rst  usage.rst
docs/source/_static/: custom.css
docs/source/api/: aggregator.rst  cli.rst  config.rst  formatters.rst  modules.rst  promptprep.aggregator.rst  promptprep.cli.rst  promptprep.config.rst  promptprep.formatters.rst  promptprep.rst  promptprep.tui.rst  tui.rst
tests/: conftest.py  test_aggregator.py  test_aggregator_comprehensive.py  test_aggregator_edge_cases.py  test_aggregator_incremental.py  test_cli.py  test_cli_diff.py  test_cli_enhanced.py  test_cli_incremental.py  test_config.py  test_formatters.py  test_tui.py
